# FundWave

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
contracts/fundwave/: Cargo.toml
contracts/fundwave/src/: lib.rs
scripts/: deploy.sh
web/: .env.example  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ConnectButton.tsx  CreateForm.tsx  DonateModal.tsx  ProgressBar.tsx
web/src/lib/: contract.ts  network.ts  wallet.tsx
